fixing the gap between social icons and body

--- a/docroot/themes/custom/ucsf/scss/node/_node-article.scss
+++ b/docroot/themes/custom/ucsf/scss/node/_node-article.scss
@@ -87,7 +87,8 @@
     grid-row: 2;
   }
 
-  #{$share} + & {
+  #{$share} + &,
+  #{$share} + .page_narrow:empty + & {
     grid-row: 1;
   }
 
